--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mtg-guessing-game",
   "version": "0.1.0",
+  "homepage": "https://trifectaiii.github.io/mtg-guessing-game",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -19,6 +20,8 @@
     "typescript": "^4.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.11",
+    "gh-pages": "^3.1.0",
     "redux-devtools-extension": "^2.13.8"
   }
 }
